--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "migrate": "prisma migrate dev --name init --preview-feature",
+    "generate": "prisma generate"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
+    "prisma": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "express": "^4.18.2"
   }
 }
