--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
-    "migrate": "prisma migrate dev --name init --preview-feature",
+    "migrate": "prisma migrate dev --schema src/prisma/schema.prisma init --preview-feature",
     "generate": "prisma generate"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
