--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
-    "migrate": "prisma migrate dev --schema src/prisma/schema.prisma init --preview-feature",
-    "generate": "prisma generate"
+    "migrate": "prisma migrate dev --schema src/prisma/schema.prisma --name $NAME",
+    "generate": "prisma generate --schema src/prisma/schema.prisma"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.2",
     "prisma": "^5.0.0",
     "ts-node": "^10.9.1",
