--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
     "migrate": "prisma migrate dev --schema src/prisma/schema.prisma --name $NAME",
-    "generate": "prisma generate --schema src/prisma/schema.prisma"
+    "generate": "prisma generate --schema src/prisma/schema.prisma",
+    "test": "jest --watch"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.6.1",
     "prisma": "^5.0.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
