--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "jest --watchAll --verbose --coverage"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
@@ -25,8 +27,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
-    "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
