--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
     "@types/supertest": "^2.0.12",
@@ -31,6 +32,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.9.2",
     "winston": "^3.10.0"
   }
