--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/jest": "^29.5.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.4.2",
     "@types/supertest": "^2.0.12",
     "jest": "^29.6.1",
@@ -27,6 +28,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.12.0",
     "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -34,6 +36,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "joi": "^17.9.2",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.10.0"
   }
 }
