--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express-fileupload": "^1.4.1",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
+    "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.12",
     "jest": "^29.6.1",
     "prisma": "^5.0.0",
@@ -35,6 +36,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "joi": "^17.9.2",
+    "nodemailer": "^6.9.4",
     "winston": "^3.10.0"
   }
 }
