--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.2",
     "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.12",
@@ -36,6 +37,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
     "winston": "^3.10.0"
   }
