--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
+    "pug": "^3.0.2",
     "winston": "^3.10.0"
   }
 }
