--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/jest": "^29.5.3",
@@ -34,12 +35,12 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
-    "pug": "^3.0.2",
     "winston": "^3.10.0"
   }
 }
