--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest --watchAll --verbose --coverage"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
     "@types/ejs": "^3.1.2",
@@ -32,12 +33,14 @@
   "dependencies": {
     "@google-cloud/storage": "^6.12.0",
     "@prisma/client": "^5.0.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
