--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
+    "stripe": "^13.2.0",
     "twilio": "^4.14.1",
     "winston": "^3.10.0"
   }
