--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/index",
+    "start": "ts-node src/index.ts",
+    "start:prod": "node dist/index",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
-    "migrate": "prisma migrate dev --schema src/prisma/schema.prisma --name $NAME",
+    "migrate": "prisma migrate dev --schema src/prisma/schema.prisma",
+    "migrate:prod": "prisma migrate deploy --schema src/prisma/schema.prisma",
     "generate": "prisma generate --schema src/prisma/schema.prisma",
     "test": "jest --watchAll --verbose --coverage"
   },
@@ -24,7 +26,7 @@
     "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.12",
     "jest": "^29.6.1",
-    "prisma": "^5.2.0",
+    "prisma": "^5.3.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -32,7 +34,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^6.12.0",
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^5.3.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
