--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
+    "socket.io": "^4.7.2",
     "stripe": "^13.2.0",
     "twilio": "^4.14.1",
     "winston": "^3.10.0"
