--- a/package.json
+++ b/package.json
@@ -18,37 +18,38 @@
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/ejs": "^3.1.5",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.1",
     "@types/express-fileupload": "^1.4.4",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.16",
-    "@types/nodemailer": "^6.4.14",
-    "@types/supertest": "^2.0.16",
+    "@types/node": "^22.14.1",
+    "@types/nodemailer": "^6.4.17",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
-    "prisma": "^5.9.1",
+    "prisma": "^6.6.0",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@google-cloud/storage": "^7.7.0",
-    "@prisma/client": "^5.9.1",
+    "@google-cloud/storage": "^7.16.0",
+    "@prisma/client": "^6.6.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.3",
-    "helmet": "^7.1.0",
-    "joi": "^17.12.1",
+    "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.9",
-    "socket.io": "^4.7.4",
-    "stripe": "^13.2.0",
-    "twilio": "^4.14.1",
-    "winston": "^3.10.0"
-  }
+    "nodemailer": "^6.10.1",
+    "socket.io": "^4.8.1",
+    "stripe": "^18.0.0",
+    "twilio": "^5.5.2",
+    "winston": "^3.17.0"
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
